Исправил картинку Take

--- a/take/index.html
+++ b/take/index.html
@@ -9,7 +9,7 @@
 		<div id="phone"></div>
 		<section id="one">
 			<div class="content">
-				<img src="image/take.png">
+				<img src="image/Take.png">
 				<h1>Picture perfect</h1>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua. 
