--- a/Movami/index.html
+++ b/Movami/index.html
@@ -21,14 +21,12 @@
 							<li>Export video in popular formats</li>
 						</ul>
 						<span class="contentDown">Download the program and follow the instructions below</span>
-						<div class="buttom">
-							<a href="#" class="Windows">Download for Free</a>
-							<a href="#" class="Apple">Download for Free</a>
-						</div>
 					</div>
-					<div class="content_image">
-						<img src="img/banner_icons.png" alt="banner icons">
-					</div>
+					<div class="content_image"></div>
+				</div>
+				<div class="buttom">
+					<a href="#" class="Windows">Download for Free</a>
+					<a href="#" class="Apple">Download for Free</a>
 				</div>
 			</div>
 		</div>
@@ -46,22 +44,23 @@
 		</div>
 		<div id="Block2">
 			<div class="container">
-				<h2>1. Install the Program</h2>
+				<div class="line"></div>
+				<h2><span class="colRed">1.</span> Install the Program</h2>
 				<p>
 					Download Movavi’s slideshow creator and run the installation file. The onscreen instructions will guide you through the setup process
 				</p>
-				<h2>2. Select the Working Mode</h2>
+				<h2><span class="colRed">2.</span> Select the Working Mode</h2>
 				<div class="content">
 					<div class="content_text">
 						<p>
-							When you launch Movavi’s slideshow maker with the music-adding capability, you’ll see a Welcome window. In this window, you can choose one of two working modes: Easy mode or Full feature mode. If you want to quickly make a slideshow with photos, music and transitions, choose Create slideshow in easy mode. If you want to incorporate video footage, titles, special effects, and other enhancements to your movie, choose Create project in full feature mode. Instructions for both modes follow below. 
+							When you launch Movavi’s slideshow maker with the music-adding capability, you’ll see a Welcome window. In this window, you can choose one of two working modes: <b>Easy mode</b> or <b>Full feature mode</b>. If you want to quickly make a slideshow with photos, music and transitions, choose <b>Create slideshow in easy mode</b>. If you want to incorporate video footage, titles, special effects, and other enhancements to your movie, choose <b>Create project in full feature mode</b>. Instructions for both modes follow below. 
 						</p>
 					</div>
 					<div class="content_image">
 						<img src="img/Blocl2_screen0.png">
 					</div>
 				</div>
-				<h2>3. Make a Slideshow</h2>
+				<h2 id="Make"><span class="colRed">3.</span> Make a Slideshow</h2>
 			</div>
 
 			<!-- Закладки -->
@@ -75,33 +74,33 @@
 			<div id="tabEasy">
 				<div class="figure"></div>
 				<div class="container">
-					<h2>3.1 Upload Photos</h2>
+					<h2><span class="colRed">3.1</span> Upload Photos</h2>
 					<div class="content">
 						<div class="content_text">
 							<p>
-								Welcome to the Slideshow Wizard! In the first tab, upload your images by clicking +Files or +Foldersand choosing the pictures to include. When the uploaded photos appear in the working area, you can drag them into any order, as well as rotate or remove them by clicking the relevant icons on each of the images. You can also set Slide duration in the appropriate field. 
+								Welcome to the Slideshow Wizard! In the <b>first tab</b>, upload your images by clicking <b>+Files</b> or <b>+Foldersand</b> choosing the pictures to include. When the uploaded photos appear in the working area, you can drag them into any order, as well as rotate or remove them by clicking the relevant icons on each of the images. You can also set <b>Slide duration</b> in the appropriate field. 
 							</p>
 						</div>
 						<div class="content_image">
 							<img src="img/tab_image1.png">
 						</div>
 					</div>
-					<h2>3.2 Add Transitions</h2>
+					<h2><span class="colRed">3.2</span> Add Transitions</h2>
 					<div class="content">
 						<div class="content_text">
 							<p>
-								Open the second tab. Here, you can choose the transition style to join your photos, or click No transitions if you don’t want fades in your slideshow. To adjust the speed of transition from one slide to the next, set the Max transition duration in the field below the list of transition styles. 
+								Open the <b>second tab</b>. Here, you can choose the transition style to join your photos, or click <b>No transitions</b> if you don’t want fades in your slideshow. To adjust the speed of transition from one slide to the next, set the <b>Max transition duration</b> in the field below the list of transition styles. 
 							</p>
 						</div>
 						<div class="content_image">
 							<img src="img/tab_image2.png">
 						</div>
 					</div>
-					<h2>3.3 Add Music</h2>
+					<h2><span class="colRed">3.3</span> Add Music</h2>
 					<div class="content">
 						<div class="content_text">
 							<p>
-								Go to the third tab. Click +Audio and upload your own music or open the Add one of our tracks list and choose from the built-in audio tracks. To sync slide duration with the rhythm of the music, click the Yes button and then set Minimum slide duration. Finally, click Finish. 
+								Go to the <b>third tab</b>. Click <b>+Audio</b> and upload your own music or open the <b>Add one of our tracks</b> list and choose from the built-in audio tracks. To sync slide duration with the rhythm of the music, click the <b>Yes</b> button and then set <b>Minimum slide duration</b>. Finally, click <b>Finish</b>. 
 							</p>
 						</div>
 						<div class="content_image">
@@ -112,13 +111,14 @@
 						Your photo movie is almost ready. Go to Step 4 to learn how to export your slideshow.
 					</p>
 					<div class="linkMode">
-						<a href="#" class="linkModeImage">See Full Feature Mode</a>
+						<label for="notebook1_2">See Full Feature Mode</label>
 					</div>
 				</div>
 			</div>
 			<div id="tabFull">
+				<div class="figure"></div>
 				<div class="container">
-					<h2>3.1 Add Your Files to the Program</h2>
+					<h2><span class="colRed">3.1</span> Add Your Files to the Program</h2>
 					<div class="content">
 					<div class="content_text">
 							<p>
@@ -129,7 +129,7 @@
 							<img src="img/tab_image1.png">
 						</div>
 					</div>
-					<h2>3.2 Add Transitions</h2>
+					<h2><span class="colRed">3.2</span> Add Transitions</h2>
 					<div class="content">
 						<div class="content_text">
 							<p>
@@ -140,7 +140,7 @@
 							<img src="img/tab_image2.png">
 						</div>
 					</div>
-					<h2>3.3 Complete Your Slideshow Music and Titles</h2>
+					<h2><span class="colRed">3.3</span> Complete Your Slideshow Music and Titles</h2>
 					<div class="content">
 						<div class="content_text">
 							<p>
@@ -152,12 +152,81 @@
 						</div>
 					</div>
 					<div class="linkMode">
-						<a href="#" class="linkModeImage">See Easy Mode</a>
+						<label for="notebook1_1">See Easy Mode</label>
+
 					</div>
 				</div>	
 			</div>
 		</div>
 		</div>
+		<div id="Block3">
+			<div class="container">
+				<h2><span class="colRed">4.</span> Save Your Clip</span></h2>
+				<div class="content">
+					<div class="content_text">
+						<p>
+							Click the <b>Export</b> button and select the appropriate option from the tabs in the upper part of the pop-up window. You can save your slideshow to watch on your computer or mobile device, or prepare it for uploading to the web. When you’re done, click <b>Start</b>. Now you know how to use our handy photo-to-video maker with music, titles and transitions! 
+						</p>	
+					</div>
+					<div class="content_image">
+							<img src="img/screen_4.png">
+						</div>
+				</div>
+			</div>
+		</div>
+		<div id="ProductBlock">
+			<div class="container">
+				<div class="elipse"></div>
+				<div class="content">
+					<div class="content_image">
+						<img src="img/ContentBlockImage.png">
+					</div>
+					<div class="content_text">
+						<h1>Movavi Slideshow Maker</h1>
+						<p>
+							An easy-to-use, yet efficient slideshow making program
+						</p>
+						<ul>
+							<li>Create a slideshow with music in 3 simple steps</li>
+							<li>Join slides with dynamic transitions</li>
+							<li>Add stylish animated titles</li>
+							<li>Adjust color, enhance picture quality</li>
+						</ul>
+						<div class="buttom">
+							<a href="#" class="Windows">Download for Free</a>
+							<a href="#" class="Apple">Download for Free</a>
+						</div>
+						<a href="#" class="PBLink1">More about the Windows version</a>
+						<a href="#" class="PBLink2">More about the Mac version</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="GudeBlock">
+			<div class="container">
+				<h1>See Other Useful How-to Guides</h1>
+				<div class="GBLink">
+					<button>  How to shrink photos</button>
+					<button>How to shrink photos</button>
+					<button>How to make a slideshow</button>
+					<button>And much more</button>
+				</div>
+			</div>
+		</div>
+		<div id="support">
+			<div class="container">
+				<h1>Have Questions?</h1>
+				<div class="supportChoise">
+					<a href="#" class="visit">
+						<span>Visit Our<br> Support Center</span>
+					</a>
+					<a href="#" class="watch">
+						<span>Watch Our<br> Video Guides</span>
+					</a>
+				</div>
+			</div>
+		</div>
+		<footer></footer>
 	</div>
 </body>
 </html>
