--- a/Bootstrap 3/index.html
+++ b/Bootstrap 3/index.html
@@ -16,9 +16,6 @@
 
 
 
-
-
-
 <div class="wrapper">
     <div class="container">
         <div class="box">
@@ -37,9 +34,9 @@ halfAyear" value="1.1">12 месяцев</button>
                         </div><br>
                         <p>Валюта</p><span>Выберите валюту</span><br>
                         <div class="btn-group" role="group" aria-label="Basic example">
-                            <button type="button" class="btn btn-primary valutes active" id="USD" value="60">USD</button>
-                            <button type="button" class="btn btn-primary valutes" id="Euro" value="70">Euro</button>
-                            <button type="button" class="btn btn-primary valutes" id="GBP" value="80">GBP</button>
+                            <button type="button" class="btn btn-primary valutes active" id="USD">USD</button>
+                            <button type="button" class="btn btn-primary valutes" id="EUR">Euro</button>
+                            <button type="button" class="btn btn-primary valutes" id="GBP">GBP</button>
                         </div><br>
                     </div>
                 </div>
@@ -73,9 +70,7 @@ halfAyear" value="1.1">12 месяцев</button>
 </div>
 </div>
 
-<div id="USD">Доллар США $ — 00,0000 руб.</div>
-<div id="GBP">Фунт — 00,0000 руб.</div>
-<div id="EUR">Евро € — 00,0000 руб.</div>
+
 
 
 
