--- a/mail/index.html
+++ b/mail/index.html
@@ -8,7 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Calculator</title>
+    <title>Calcul</title>
 </head>
 <body>
 
